salesforce-composite/2.4/modules/ROOT/pages/salesforce-composite-connector-reference.adoc
= Salesforce Composite Connector Reference - Mule 4
:page-aliases: connectors::salesforce/salesforce-composite-connector-reference.adoc

Support Category: Select

Salesforce Composite Connector v2.4

Release Notes: xref:release-notes::connector/salesforce-composite-connector-release-notes-mule-4.adoc[Salesforce Composite Connector Release Notes]

== Configurations
---
[[composite-config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<composite-config_oauth-user-pass, OAuth Username Password>>
| The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[composite-config_oauth-user-pass]]
===== OAuth Username Password

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Consumer Key a| String |  Consumer key for Salesforce connected app. |  | x
| Consumer Secret a| String |  Your application's client secret (consumer secret in Remote Access Detail). |  | x
| Username a| String |  Username used to initialize the session. |  | x
| Password a| String |  Password used to authenticate the user |  | x
| Security Token a| String |  User's security token. It can be omitted if your IP has been white listed on Salesforce. |  |
| Token Endpoint a| String |  URL pointing to the server responsible for providing the authentication token. According to Salesforce it should be `+https://login.salesforce.com/services/oauth2/token+`, or, if implementing for a community, `+https://acme.force.com/customers/services/oauth2/token+` (where acme.force.com/customers is your community URL). |  `+https://login.salesforce.com/services/oauth2/token+` |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Host a| String |  Hostname of the proxy. If this property is not set, then no proxy is used, otherwise a proxy is used, but a proxy host must be specified. |  |
| Port a| Number |  Port of the proxy. If host is set then this property must be set and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy, otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Response Timeout a| Number |  Wait time until a response is received. This attribute works in tandem with Time unit. Values less than one millisecond will be converted to 0. |  5 |
| Time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to be used for the responseTimeout parameter. |  SECONDS |

| Connection Timeout a| Number |  The socket connection timeout value. This attribute works in tandem with #connectionTimeoutUnit. |  |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A TimeUnit that qualifies the #connectionTimeout |  SECONDS | 10

| Tls configuration a| <<tls-configuration>> |  Protocol to use for communication. Valid values are HTTP and HTTPS. When using HTTPS the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then, you must configure at least the keystore in the tls:context child element of this listener-config. | HTTP |
|===

== Operations

* <<createSobjectCollections>>
* <<createSobjectTree>>
* <<deleteSobjectCollections>>
* <<executeCompositeBatch>>
* <<executeCompositeRequest>>
* <<getSobjectCollections>>
* <<postCreate>>
* <<postDelete>>
* <<postGetLimits>>
* <<postQuery>>
* <<postQueryAll>>
* <<postRetrieve>>
* <<postSearch>>
* <<postUpdate>>
* <<preCreate>>
* <<preDelete>>
* <<preGetLimits>>
* <<preQuery>>
* <<preQueryAll>>
* <<preRetrieve>>
* <<preSearch>>
* <<preUpdate>>
* <<updateSobjectCollections>>
* <<upsertSobjectCollections>>

[[createSobjectCollections]]
=== Create Sobject Collections
`<salesforce-composite:create-sobject-collections>`

Add up to 200 records and return a list of `SaveResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[createSobjectTree]]
=== Create sObject Tree
`<salesforce-composite:create-sobject-tree>`

Sends a list of sObject trees to Salesforce to be created.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| SObject Root Type a| String |  The sObject type of the root of the trees. |  | x
| SObject Tree a| Array of Object |  A list of maps containing representing the list of trees that need to be created. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[deleteSobjectCollections]]
=== Delete sObject Collections
`<salesforce-composite:delete-sobject-collections>`

Delete up to 200 records and return a list of `DeleteResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Ids a| Array of String |  The IDs of the entities to be deleted. |  | x
| All Or None a| Boolean |  Indicates whether to roll back the entire request when the deletion of any object fails. |  false |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[executeCompositeBatch]]
=== Execute Composite Batch
`<salesforce-composite:execute-composite-batch>`

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sub Requests a| Array of Object |  The list of subrequests to execute. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[executeCompositeRequest]]
=== Execute Composite Request
`<salesforce-composite:execute-composite-request>`

Execute a series of REST API requests in a single call. You can use the output of one request as the input to a subsequent request. The response bodies and HTTP statuses of the requests are returned in a single response body. The entire request counts as a single call toward your API limits.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[getSobjectCollections]]
=== Get sObject Collections
`<salesforce-composite:get-sobject-collections>`

Retrieve one or more records of the same object type.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The sObject type of the root of the trees. |  | x
| List of ids a| Array of String |  A list of one or more IDs of the objects to return. All IDs must belong to the same object type. |  | x
| List of fields a| Array of String |  A list of fields to include in the response. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postCreate]]
=== Post Create
`<salesforce-composite:post-create>`

Provide metadata for the result of a create. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a create subrequest generated by `preCreate(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Create Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postDelete]]
=== Post Delete
`<salesforce-composite:post-delete>`

Provide metadata for the result of a delete. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a delete subrequest generated by `preDelete(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Delete Result a| Object |  The result of the delete subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postGetLimits]]
=== Post Get Limits
`<salesforce-composite:post-get-limits>`

Provide metadata for the result of a create. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a create subrequest generated by `preCreate(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Get Limits Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postQuery]]
=== Post Query
`<salesforce-composite:post-query>`

Provide metadata for the result of a query. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a query subrequest generated by `preQuery(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that was used in the `preQuery` operation - needed for metadata. |  | x
| Query Result a| Object |  The result of the query subrequest. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postQueryAll]]
=== Post Query All
`<salesforce-composite:post-query-all>`

Provide metadata for the result of a query. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a query subrequest generated by `preQueryAll(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query Result a| Object |  The result of the create subrequest. |  `#[payload]` |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postRetrieve]]
=== Post Retrieve
`<salesforce-composite:post-retrieve>`

Provide metadata for the result of a retrieve. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a retrieve subrequest generated by `preRetrieve(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The type of the retrieved object - used for metadata. |  | x
| Retrieve Data a| Object |  The result of the retrieve subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postSearch]]
=== Post Search
`<salesforce-composite:post-search>`

Provide metadata for the result of a search. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to a search subrequest generated by `preSearch(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Search Result a| Object |  The result of the search subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[postUpdate]]
=== Post Update
`<salesforce-composite:post-update>`

Provide metadata for the result of an update. This operation takes as input one record from the result returned by `executeCompositeBatch(String, java.util.List)`, which belongs to an update subrequest generated by `preUpdate(String, java.util.Map)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Update Result a| Object |  The result of the update subrequest. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preCreate]]
=== Pre Create
`<salesforce-composite:pre-create>`

Provide metadata for a create based on an object that is created and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  Type of object to create. |  | x
| S Object a| Object |  Object to create as a map that sticks to metadata for a selected type. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preDelete]]
=== Pre Delete
`<salesforce-composite:pre-delete>`

Provide metadata for a delete based on an object that is deleted and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  type of object that is deleted. |  | x
| Id a| String |  The ID of the object that is deleted. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preGetLimits]]
=== Pre Get Limits
`<salesforce-composite:pre-get-limits>`

Provide metadata for getLimits and generate a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preQuery]]
=== Pre Query
`<salesforce-composite:pre-query>`

Provide metadata for a query based on an object that is queried and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that is run in `executeCompositeBatch`.|  | x
| Parameters a| Object |  The parameters to use in a parameterized query. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preQueryAll]]
=== Pre Query All
`<salesforce-composite:pre-query-all>`

Provide metadata for a query based on an object that is queried and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Query a| String |  The query that is run in `executeCompositeBatch`. |  | x
| Parameters a| Object |  The parameters to use in a parameterized query. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preRetrieve]]
=== Pre Retrieve
`<salesforce-composite:pre-retrieve>`

Provide metadata for a retrieve based on an object that is retrieved and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Retrieve Data a| Object |  Object to retrieve as a map that sticks to metadata for a selected type. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preSearch]]
=== Pre Search
`<salesforce-composite:pre-search>`

Provide the user a way to input a SOSL String and generate a subrequest for execution by `executeCompositeBatch(java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Search a| String |  The SOSL string that is run in executeCompositeBatch. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[preUpdate]]
=== Pre Update
`<salesforce-composite:pre-update>`

Provide metadata for a create based on an object that is created and generates a subrequest for execution by `executeCompositeBatch(String, java.util.List)`.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  Type of object that is created. |  | x
| SObject a| Object |  Object to create as a map that sticks to metadata for a selected type. |  `#[payload]`. |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[updateSobjectCollections]]
=== Update sObject Collections
`<salesforce-composite:update-sobject-collections>`

Update up to 200 records and return a list of `SaveResult` objects. You can roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

[[upsertSobjectCollections]]
=== Upsert sObject Collections
`<salesforce-composite:upsert-sobject-collections>`

Upsert up to 200 records of same type and return a list of `SaveResult` objects. You roll back the entire request if an error occurs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The sObject type. |  | x
| External Field Name a| String |  The name of the external field for this sobject type. |  | x
| Request Body a| Object |  The request body. |  `#[payload]` |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of Object
|===

=== For Configurations

* <<composite-config>>

==== Throws

* SALESFORCE-COMPOSITE:CONNECTIVITY
* SALESFORCE-COMPOSITE:INVALID_SESSION
* SALESFORCE-COMPOSITE:RETRY_EXHAUSTED
* SALESFORCE-COMPOSITE:TRANSACTION
* SALESFORCE-COMPOSITE:TRANSFORMATION
* SALESFORCE-COMPOSITE:UNKNOWN
* SALESFORCE-COMPOSITE:VALIDATION

== Types
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[repeatable-in-memory-iterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of instances that is initially be allowed to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the *Buffer Size Increment* attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | The maximum amount of instances to keep in memory. If more than that is required, then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed. |  |
|===

[[tls-configuration]]
=== TLS Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Trust Store Configuration a| <<trust-store-configuration>> | Contains the configuration parameters for the truststore configuration |  |
| Key Store Configuration a| <<key-store-configuration>> | Contains the configuration parameters for the keystore configuration |  |
| Advanced a| <<advanced-tls-configuration>> | Contains advanced configuration parameters for TLS. |  |
|===

[[trust-store-configuration]]
=== Truststore Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Defines the location of the truststore to use, which will be resolved relative to the current classpath and file system, if possible. A password is also required. |  |
| Password a| String | The password to access the truststore that is specified in the Path. |  |
| Type a| Enumeration, one of:

* JCEKS
* JKS
* PKCS12

| Defines the type of the truststore to use (such as JKS, JCEKS, or PKCS12). | JKS |
| Algorithm a| String | Defines the truststore algorithm. |  |
| Insecure a| Boolean | If `true`, the truststore will be insecure, meaning no certificate validations will be performed. | False |

|===

[[key-store-configuration]]
=== Keystore Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Type a| Enumeration, one of:

* JCEKS
* JKS
* PKCS12

| Defines the type of the keystore (such as JKS, JCEKS, or PKCS12). | JKS |
| Path a| String | Defines the location of the keystore to use, which will be resolved relative to the current classpath and file system, if possible. |  |
| Alias a| String | Defines the alias of the key to use when the keystore contains many private keys. By default, the first key in the file is used. |  |
| Key Password a| String| Defines the password used to protect the private key. |  |
| Password a| String| Defines the password to access the keystore that is specified in the Path. |  |
| Algorithm a| String | Defines the truststore algorithm. |  |
|===

[[advanced-tls-configuration]]
=== Advanced TLS Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enable Protocols a| String | Defines the enabled TLS protocols, which must be a subset of the globally enabled TLS protocols. | By default, the globally enabled TLS protocols are used. |
| Enable Chiper Suites a| String | Defines the enabled TLS cipher suites, which must be a subset of the globally enabled cipher suites. | By default, the globally enabled cipher suites are used. |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
